# hogtop

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
assets/: README.md
src/: app.rs  control.rs  event.rs  identify.rs  main.rs  sampler.rs  ui.rs
src/classifier/: apps.rs  chrome.rs  electron.rs  firefox.rs  java.rs  kernel.rs  mod.rs  node.rs  python.rs  shell.rs
src/ui/: icons.rs  mod.rs  plain.rs  snapshot.rs  tui.rs
src/ui/tui/: input.rs  mod.rs  render.rs  renderer.rs  theme.rs
