[package]
name = "hogtop"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures-util = "0.3.32"
nix = { version = "0.31.3", features = ["signal"] }
ratatui = "0.30.0"
sysinfo = "0.38.4"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time", "sync"] }
