[package]
name = "toph"
version = "0.1.0"
edition = "2024"
description = "An interactive TUI that ranks CPU/memory-hogging processes over a growing window and lets you kill them."
license = "MIT OR Apache-2.0"
repository = "https://github.com/arinal/toph"
homepage = "https://github.com/arinal/toph"
readme = "README.md"
keywords = ["tui", "process", "monitor", "htop", "cpu"]
categories = ["command-line-utilities"]
include = ["/src/**", "/Cargo.toml", "/README.md", "/LICENSE-MIT", "/LICENSE-APACHE"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures-util = "0.3.32"
nix = { version = "0.31.3", features = ["signal"] }
ratatui = "0.30.0"
sysinfo = "0.38.4"
termbg = "0.6.2"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time", "sync"] }
